# bdi-final

./: .gitignore  Dockerfile  README.md  api_test_results.md  architecture.md  docker-compose.yaml  pyproject.toml  requirements.txt
airflow/: Dockerfile  docker-compose.override.yml  docker-compose.yaml  requirements.txt
airflow-dags/: docker-compose.override.yaml  requirements.txt
airflow-dags/dags/: exampledag.py
airflow/dags/: aircraft_db_dag.py  fuel_consumption_dag.py  readsb_hist_dag.py
airflowDags/: .env.template  Dockerfile  requirements.txt
airflowDags/dags/: aircraft_db_dag.py  exampledag.py  fuel_consumption_dag.py  monitoring.py  readsb_hist_dag.py
bdi_api/: .env.template  Dockerfile  app.py  schema.sql  test_data.sql
bdi_api/s8/: exercise.py
infrastructure/: main.tf  terraform.tfvars.example  variables.tf
screenshot /: dag_details.md
terraform/: README.md  main.tf  s3.tf  terraform.tfvars
terraform/scripts/: airflow_setup.sh  api_setup.sh
tests/: test_api.py
